# serializer version: 1
# name: test_fetch_exchange_live[AM]
  list([
    dict({
      'datetime': FakeDatetime(2024, 4, 8, 12, 0, tzinfo=datetime.timezone.utc),
      'netFlow': 0.0,
      'sortedZoneKeys': 'AM->GE',
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_fetch_exchange_live[AZ]
  list([
    dict({
      'datetime': FakeDatetime(2024, 4, 8, 12, 0, tzinfo=datetime.timezone.utc),
      'netFlow': -20.295879,
      'sortedZoneKeys': 'AZ->GE',
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_fetch_exchange_live[RU-1]
  list([
    dict({
      'datetime': FakeDatetime(2024, 4, 8, 12, 0, tzinfo=datetime.timezone.utc),
      'netFlow': -16.0,
      'sortedZoneKeys': 'GE->RU-1',
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_fetch_exchange_live[TR]
  list([
    dict({
      'datetime': FakeDatetime(2024, 4, 8, 12, 0, tzinfo=datetime.timezone.utc),
      'netFlow': 0.0,
      'sortedZoneKeys': 'GE->TR',
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_fetch_production_historical
  list([
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 0, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 619,
        'hydro': 348,
        'solar': 0,
        'wind': 19,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 1, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 619,
        'hydro': 323,
        'solar': 0,
        'wind': 15,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 2, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 619,
        'hydro': 321,
        'solar': 0,
        'wind': 7,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 3, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 619,
        'hydro': 333,
        'solar': 0,
        'wind': 7,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 4, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 618,
        'hydro': 339,
        'solar': 0,
        'wind': 7,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 5, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 618,
        'hydro': 381,
        'solar': 0,
        'wind': 5,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 6, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 615,
        'hydro': 482,
        'solar': 0,
        'wind': 2,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 7, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 611,
        'hydro': 551,
        'solar': 0,
        'wind': 3,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 8, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 608,
        'hydro': 567,
        'solar': 0,
        'wind': 8,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 9, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 604,
        'hydro': 577,
        'solar': 0,
        'wind': 9,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 10, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 604,
        'hydro': 569,
        'solar': 0,
        'wind': 14,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 11, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 605,
        'hydro': 561,
        'solar': 0,
        'wind': 17,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 12, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 604,
        'hydro': 562,
        'solar': 0,
        'wind': 18,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 13, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 606,
        'hydro': 597,
        'solar': 0,
        'wind': 21,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 14, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 607,
        'hydro': 700,
        'solar': 0,
        'wind': 21,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 15, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 607,
        'hydro': 718,
        'solar': 0,
        'wind': 21,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 16, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 606,
        'hydro': 701,
        'solar': 0,
        'wind': 21,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 17, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 610,
        'hydro': 681,
        'solar': 0,
        'wind': 20,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 18, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 608,
        'hydro': 662,
        'solar': 0,
        'wind': 18,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 19, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 608,
        'hydro': 585,
        'solar': 0,
        'wind': 20,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 20, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 611,
        'hydro': 505,
        'solar': 0,
        'wind': 21,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 21, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 613,
        'hydro': 406,
        'solar': 0,
        'wind': 20,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 22, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 614,
        'hydro': 371,
        'solar': 0,
        'wind': 19,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2020, 1, 1, 23, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 616,
        'hydro': 387,
        'solar': 0,
        'wind': 19,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
  ])
# ---
# name: test_fetch_production_live
  list([
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2024, 4, 9, 0, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 251,
        'hydro': 1078,
        'solar': 0,
        'wind': 17,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2024, 4, 9, 1, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 251,
        'hydro': 1068,
        'solar': 0,
        'wind': 15,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2024, 4, 9, 2, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 251,
        'hydro': 1115,
        'solar': 0,
        'wind': 13,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2024, 4, 9, 3, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 247,
        'hydro': 972,
        'solar': 0,
        'wind': 13,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2024, 4, 9, 4, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 244,
        'hydro': 1050,
        'solar': 0,
        'wind': 16,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2024, 4, 9, 5, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 243,
        'hydro': 1141,
        'solar': 0,
        'wind': 19,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2024, 4, 9, 6, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 254,
        'hydro': 1226,
        'solar': 0,
        'wind': 20,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2024, 4, 9, 7, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 310,
        'hydro': 1271,
        'solar': 0,
        'wind': 20,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2024, 4, 9, 8, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 322,
        'hydro': 1268,
        'solar': 0,
        'wind': 20,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2024, 4, 9, 9, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 306,
        'hydro': 1240,
        'solar': 0,
        'wind': 20,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2024, 4, 9, 10, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 272,
        'hydro': 1253,
        'solar': 0,
        'wind': 19,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2024, 4, 9, 11, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 272,
        'hydro': 1266,
        'solar': 0,
        'wind': 20,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2024, 4, 9, 12, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 273,
        'hydro': 1235,
        'solar': 0,
        'wind': 20,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2024, 4, 9, 13, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 256,
        'hydro': 1210,
        'solar': 0,
        'wind': 19,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2024, 4, 9, 14, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 244,
        'hydro': 1231,
        'solar': 0,
        'wind': 16,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2024, 4, 9, 15, 0, tzinfo=datetime.timezone.utc),
      'production': dict({
        'gas': 271,
        'hydro': 1296,
        'solar': 0,
        'wind': 19,
      }),
      'source': 'gse.com.ge',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'GE',
    }),
  ])
# ---
